MiniProject/src/objects/Email_Details__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Email_Details</relationshipLabel>
        <relationshipName>Email_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sender__c</fullName>
        <label>Sender</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <label>Email_Details</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Enquiry</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email_Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>